<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tu vung tieng Anh</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="yellow">#ffc001</color>
    <color name="green_action_bar">#668000</color>

    <string name="authors">Authors</string>
    <string name="favourite">Your quotes</string>
    <string name="all_quotes">All quotes</string>
    <string name="share_app">Share this app</string>
    <string name="top50">Popular</string>
    <string name="app_id">156851584514921</string>
    <string name="rate">Rate us</string>
    <string name="settings">Settings</string>
    <string name="choose_language">Choose your language</string>
    <string name="meaning">Meaning</string>

    <color name="silver_item">#e9f0e5</color>
    <color name="silver_item_less">#e9e8e8</color>
    <color name="black">#6cb4fc</color>
    <color name="white">#FFFFFF</color>

    <string name="search_hint">Type author\'s name here</string>

    <color name="green_dark">#526a15</color>
    <color name="blue_bar">#000000</color>
    <color name="blue_title">#1f67e9</color>
    <color name="orange">#f4b400</color>
    <color name="green">#53a93f</color>

    <string name="setting">Setting</string>

</resources>